fixed search icon, suggestions shadow, suggestions gap

--- a/components/Layout/components/Shared/SearchBar/SearchBar.module.css
+++ b/components/Layout/components/Shared/SearchBar/SearchBar.module.css
@@ -28,6 +28,10 @@
     color: var(--color-dark-grey) !important;;
 }
 
+.input :global(.MuiIconButton-root) {
+    transform: rotate(0deg) !important;
+}
+
 .icon {
     color: var(--color-dark-grey) !important;;
 }
