--- a/components/Suggestions/Suggestions.module.css
+++ b/components/Suggestions/Suggestions.module.css
@@ -13,7 +13,6 @@
 
 .carousel :global(.text-white) {
     background-color: transparent !important;
-    box-shadow: #371C91 1px 1px 3px 1px;
 }
 
 .carousel :global(.card-img-overlay) {
@@ -47,7 +46,7 @@
     align-items: center;
     justify-items: center;
     display: flex;
-    gap: 3%;
+    gap: 16px;
 }
 
 .circular {
